...
                    android:hint="@string/item_name_label"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/itemNameInput"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:inputType="text" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
...
                    android:hint="@string/item_value_label"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/itemName">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/itemEstimatedValueInput"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:inputType="numberDecimal" />

                </com.google.android.material.textfield.TextInputLayout>

...
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/linearLayout">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/itemDescriptionInput"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:inputType="textMultiLine" />
                </com.google.android.material.textfield.TextInputLayout>

            </androidx.constraintlayout.widget.ConstraintLayout>
...
                    android:layout_marginTop="8dp"
                    android:text="Add tags"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/itemComments" />

                <com.google.android.material.chip.ChipGroup
                    android:id="@+id/itemTagsList"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/addTagButton">
...
                android:text="@string/item_photos_text"
                android:textAlignment="textStart"
                android:textSize="34sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/addPhotoToItem"
                style="?attr/materialButtonOutlinedStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:text="Add photo" />

            <Button
                android:id="@+id/delete_pictures_button"
                style="?attr/materialButtonOutlinedStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
...
            android:layout_height="match_parent"
            android:layout_gravity="center_horizontal"
            android:layout_margin="12sp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/addItemToListBtn"
                style="?attr/materialButtonOutlinedStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="8sp"
                android:layout_marginBottom="24sp"
                android:layout_weight="1"
                android:text="Add item" />

            <Button
                android:id="@+id/deleteItemFromListBtn"
                style="?attr/materialButtonOutlinedStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="8sp"
                android:layout_weight="1"
                android:text="Delete item" />

        </LinearLayout>

    </LinearLayout>
</ScrollView>

...
