...
    <string name="app_name">Casa Catalog</string>
    <string name="user_profile_picture">User profile picture</string>
    <string name="back_button">Back button</string>

    <string name="title_add_item">Add a new item</string>
    <string name="title_edit_item">Edit %1$s</string>
    <string name="title_edit_tags">Edit tags</string>
    <string name="title_profile">Your profile</string>

    <string name="item_basics_title_text">Basics</string>
    <string name="item_name_label">Item Name</string>
    <string name="item_value_label">Estimated Value</string>
    <string name="item_purchase_date_label">Purchase Date</string>
...
